started controller & endpoint functionality

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <div id="header-box">
         <h1 id="header">Spectral Seedlings Inventory</h1>
     </div>
-    <div id="product-list">
+    <div id="product-box">
         <select id="categories-list" size="0">
             <option value="Category..." selected>Category...</option>
         </select>
