--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,6 @@
     </div>
     <div id="category-box">
         <select id="categories-list" size="0">
-            <option value="Category..." selected>Category...</option>
         </select>
         <div id="make-category-box">
             <label for="delete-category">Remove Category</label>
@@ -36,5 +35,6 @@
         </div>
     </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="/index.js"></script>
 </html>
