prev errors fixed, event listeners written (untested), clearCategories & clearProducts not working

--- a/public/index.html
+++ b/public/index.html
@@ -12,12 +12,13 @@
     </div>
     <div id="category-box">
         <select id="categories-list" size="0">
+            <option value="Categories...">Categories...</option>
         </select>
         <div id="make-category-box">
             <label for="delete-category">Remove Category</label>
             <button id="delete-category">-</button>
             <label for="category-name">New Category:</label>
-            <input id="category-name" type="text" placeholder="New Category">
+            <input id="category-name" placeholder="New Category">
             <label for="new-category">Add Category</label>
             <button id="new-category">+</button>
         </div>
@@ -27,9 +28,9 @@
         </ul>
         <div id="make-product-box">
             <label for="product-name">New Product:</label>
-            <input id="product-name" type="text" placeholder="Product Name">
+            <input id="product-name" placeholder="Product Name">
             <label for="product-price">Price:</label>
-            <input id="product-price" type="text" placeholder="0.00">
+            <input id="product-price" placeholder="0.00">
             <label for="new-product">Add Product</label>
             <button id="new-product">+</button>
         </div>
