--- a/public/index.html
+++ b/public/index.html
@@ -12,33 +12,43 @@
     <div id="header-box">
         <h1 id="header">Spectral Seedlings Inventory</h1>
     </div>
-    <div id="product-box">
-        <ul id="product-list">
-        </ul>
-        <div id="make-product-box">
-            <div id="make-product-inputs">
-                <label for="product-name">New Product:</label>
-                <input id="product-name" placeholder="Product Name">
-                <label for="product-price">Price:</label>
-                <input id="product-price" placeholder="0.00">
-            </div>
-            <div id="make-product-button">
-                <button id="new-product">+</button>
-                <label for="new-product">Add Product</label>
+    <div id="products-and-categories-container">
+        <div id="product-box">
+            <ul id="product-list">
+            </ul>
+            <div id="make-product-box">
+                <div id="make-product-inputs">
+                    <label for="product-name">New Product:</label>
+                    <input id="product-name" placeholder="Product Name">
+                    <label for="product-price">Price:</label>
+                    <input id="product-price" placeholder="0.00">
+                </div>
+                <div id="make-product-btn">
+                    <button id="new-product">+</button>
+                    <label for="new-product">Add Product</label>
+                </div>
             </div>
         </div>
-    </div>
-    <div id="category-box">
-        <select id="categories-list" size="0">
-            <option value="Categories...">Categories...</option>
-        </select>
-        <div id="make-category-box">
-            <label for="category-name">New Category:</label>
-            <input id="category-name" placeholder="New Category">
-            <button id="new-category">+</button>
-            <label for="new-category">Add Category</label>
-            <button id="delete-category">-</button>
-            <label for="delete-category">Remove Category</label>
+        <div id="category-box">
+            <select id="categories-list" size="0">
+                <option value="Categories...">Categories...</option>
+            </select>
+            <div id="make-category-inputs">
+                <div id="make-category-name">
+                    <label for="category-name">New Category:</label>
+                    <input id="category-name" placeholder="New Category">
+                </div>
+                <div id="category-btns">
+                    <div id="make-category-btn">
+                        <button id="new-category">+</button>
+                        <label for="new-category">Add Category</label>
+                    </div>
+                    <div id="delete-category-btn">
+                        <button id="delete-category">X</button>
+                        <label for="delete-category">Remove Category</label>
+                    </div>
+                </div>
+            </div> 
         </div>
     </div>
 </body>
