added additional semantic tags

--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,11 @@
     <title>Spectral Seedlings Inventory</title>
 </head>
 <body>
-    <div id="header-box">
+    <header id="header-box">
         <h1 id="header">Spectral Seedlings Inventory</h1>
-    </div>
-    <div id="products-and-categories-container">
-        <div id="product-box">
+    </header>
+    <main id="products-and-categories-container">
+        <section id="product-box">
             <ul id="product-list">
             </ul>
             <div id="make-product-box">
@@ -28,8 +28,8 @@
                     <label for="new-product">Add Product</label>
                 </div>
             </div>
-        </div>
-        <div id="category-box">
+        </section>
+        <section id="category-box">
             <select id="categories-list" size="0">
                 <option value="Categories...">Categories...</option>
             </select>
@@ -49,8 +49,8 @@
                     </div>
                 </div>
             </div> 
-        </div>
-    </div>
+        </section>
+    </main>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="/index.js"></script>
